--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,7 +55,7 @@ nav a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 
@@ -86,6 +86,8 @@ nav a {
 	justify-content: center;
 	align-items: center;
 	width: 1000px;
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
 
 .title {
@@ -103,7 +105,7 @@ nav a {
 .tea img {
 	height: 200px;
 	width: 300px;
-	padding: 15px;
+	padding: 10px;
 }
 
 	/* Location Section */
